--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Login
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\HP\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\shand\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\HP\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
